--- a/vscode-extension/package.json
+++ b/vscode-extension/package.json
@@ -19,48 +19,53 @@
       }
     ],
     "configuration": {
-      "title": "Aspen SQLplus Formatter",
+      "title": "AspenSQLplus-fmt",
       "properties": {
-        "aspensqlFmt.path": {
+        "aspensqlplusfmt.path": {
           "type": "string",
           "default": "",
           "description": "Path to the aspensqlplus-fmt executable. If empty, will try to use one bundled or on PATH."
         },
-        "aspensqlFmt.lineWidth": {
+        "aspensqlplusfmt.lineWidth": {
           "type": "number",
           "default": 88,
           "description": "Maximum line width"
         },
-        "aspensqlFmt.indent": {
+        "aspensqlplusfmt.indent": {
           "type": "number",
           "enum": [2, 4],
           "default": 2,
           "description": "Indentation spaces"
         },
-        "aspensqlFmt.uppercaseKeywords": {
+        "aspensqlplusfmt.uppercaseKeywords": {
           "type": "boolean",
           "default": true,
           "description": "Uppercase SQL keywords"
         },
-        "aspensqlFmt.autoBuild": {
+        "aspensqlplusfmt.autoBuild": {
           "type": "boolean",
             "default": true,
             "description": "Automatically build the Rust formatter if not found (requires cargo in PATH)"
         },
-        "aspensqlFmt.autoDownload": {
+        "aspensqlplusfmt.autoDownload": {
           "type": "boolean",
           "default": true,
           "description": "Attempt to download a prebuilt aspensqlplus-fmt binary when not bundled or locally built"
         },
-        "aspensqlFmt.version": {
+        "aspensqlplusfmt.version": {
           "type": "string",
           "default": "0.1.0",
           "description": "aspensqlplus-fmt version for remote download (matches GitHub release tag v<version>)"
         },
-        "aspensqlFmt.enableUnusedVariableDiagnostics": {
+        "aspensqlplusfmt.enableUnusedVariableDiagnostics": {
           "type": "boolean",
           "default": true,
           "description": "Show warnings for variables declared (DECLARE/SET/LOCAL) but never used"
+        },
+        "aspensqlplusfmt.enableDuplicateVariableDiagnostics": {
+          "type": "boolean",
+          "default": true,
+          "description": "Show errors for variables that have already been declared"
         }
       }
     },
